tests/neg/i13703.check
-- Error: tests/neg/i13703.scala:3:17 ----------------------------------------------------------------------------------
3 |val f: Foo { var i: Int } = new Foo { var i: Int = 0 } // error
  |             ^^^^^^^^^^
  |             refinement cannot be a mutable var.
  |             You can use an explicit getter i and setter i_= instead
